--- a/Networking_Concepts/Networking_Concepts.uproject
+++ b/Networking_Concepts/Networking_Concepts.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Networking_Concepts",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
