--- a/Networking_Concepts/Networking_Concepts.uproject
+++ b/Networking_Concepts/Networking_Concepts.uproject
@@ -9,8 +9,16 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"Engine"
+				"Engine",
+				"CableComponent",
+				"ReplicationGraph"
 			]
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "ReplicationGraph",
+			"Enabled": true
 		}
 	]
 }
