--- a/Networking_Concepts/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Networking_Concepts/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,14 +134,14 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Classes_Game/Networking_Concepts
 
 [EditorStartup]
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-Networking_Concepts.TimeStamp=2020.09.14-21.29.09
-Networking_Concepts.LastCompileMethod=External
+Networking_Concepts.TimeStamp=2020.09.15-01.20.26
+Networking_Concepts.LastCompileMethod=Runtime
 PakFile.TimeStamp=2020.09.14-15.26.12
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2020.09.14-15.26.15
@@ -940,13 +940,15 @@ BlueprintGraph.TimeStamp=2020.09.14-15.26.03
 BlueprintGraph.LastCompileMethod=Unknown
 PerfCounters.TimeStamp=2020.09.14-15.26.12
 PerfCounters.LastCompileMethod=Unknown
+ReplicationGraph.TimeStamp=2020.09.14-15.28.54
+ReplicationGraph.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=3840.000 Y=690.000
-WindowSize=X=1289.333 Y=729.333
+ScreenPosition=X=1280.000 Y=690.000
+WindowSize=X=1295.333 Y=735.333
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
